--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
 }
 
 /* header */
-header {
+.header_div {
+    padding: 6px 1005px;
     position: fixed;
     justify-content: space-around;
     align-items: center;
@@ -17,7 +18,7 @@ header {
     z-index: 1;
 }
 
-h2 {
+span {
     font-family: Pridi;
     font-size: 18px;
     font-weight: 400;
@@ -44,8 +45,8 @@ h2 {
     font-size: 50px;
     font-weight: 400;
     line-height: 75px;
-    font-size: 18px;
     color: #FFFFFF;
+    margin-left: 35%;
 }
 
 .section1_aticle {
@@ -61,6 +62,7 @@ h2 {
     color: #FFFFFF;
 }
 
-.section2{
+
+/* .section2 {
     height: 389px;
-}
+} */
