--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,17 @@
 }
 
 /* header */
-.header_div {
-    padding: 6px 1005px;
-    position: fixed;
-    justify-content: space-around;
-    align-items: center;
+.header {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 6px 1005px;
+    margin: auto;
+    position: fixed;
     max-width: inherit;
     width: inherit;
-    left: 130px;
+    left: 50%;
+    transform: translateX(-50%);
     top: 0;
     z-index: 1;
 }
@@ -24,20 +26,30 @@ span {
     font-weight: 400;
     line-height: 27.9px;
     color: #FA793C;
+    justify-content: center;
 }
 
 .navbar_ul {
-    display: flex;
     column-gap: 32px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-left: 631px;
 }
 
+/* section */
 .section1 {
     height: 550px;
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 50px;
     background-image: url("../imiges/section1_cover.png");
+}
+
+.section1_aticle {
+    padding: 34px 40px;
 }
 
 .section1_title {
@@ -49,10 +61,6 @@ span {
     margin-left: 35%;
 }
 
-.section1_aticle {
-    padding: 34px 40px;
-}
-
 .section1_p {
     font-family: Kanit;
     font-size: 20px;
@@ -62,7 +70,115 @@ span {
     color: #FFFFFF;
 }
 
+.section2 {
+    width: calc(100%, 1180px);
+    margin: 79px auto;
+    position: relative;
+}
 
-/* .section2 {
-    height: 389px;
-} */
+h2 {
+    font-family: Kanit;
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 45px;
+    text-align: left;
+    color: #000000;
+}
+
+.section_cards {
+    display: flex;
+    row-gap: 21px;
+    margin: auto;
+    border: 1px solid #000000
+}
+
+.active {
+    border: 1px solid #000000
+}
+
+article {
+    flex: 1 1 400px;
+}
+
+.card_img {
+    width: 378px;
+    height: 189px;
+    object-fit: cover;
+}
+
+h5 {
+    font-family: Kanit;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 32px;
+    text-align: left;
+    margin-bottom: 8px;
+    margin-top: 16px;
+}
+
+.section_cards_p {
+    font-family: Kanit;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 24px;
+    text-align: left;
+}
+
+.section3 {
+    width: calc(100%, 1440px);
+    margin: 100px auto;
+    display: flex;
+}
+
+.section3_img_container {
+    width: 700px;
+    height: 400px;
+}
+
+.section2_img_container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+h6 {
+    font-family: Kanit;
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 45px;
+    text-align: left;
+    color: #000000;
+}
+
+p {
+    font-family: Kanit;
+    font-size: 24px;
+    font-weight: 275;
+    line-height: 32px;
+    text-align: left;
+    color: #000000;
+}
+
+button {
+    width: 211px;
+    height: 52px;
+    margin-top: 40px;
+    border: none;
+    background-color: #CC5A24;
+    font-family: Kanit;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    color: #FFFFFF;
+
+}
+
+/* footer */
+footer {
+    background-color: #000000;
+}
+
+.logo {
+    margin: auto;
+    padding: 31px 500px;
+}
